<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="MAIN" Id="{3072df51-7c74-4910-9d79-1ee236673122}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	TestAblauf				:Seq_2;
	
	Execute					:BOOL;		
	Position_1				:sRoboterProzessVariablen;
	Position_2				:sRoboterProzessVariablen;
	Position_3				:sRoboterProzessVariablen;

	
	TestSystem				:eSystemCommand; 
	TestSkill				:eSkillCommand; 
	TestVariablen			:sSmartGreiferProzessVariablen;
	
	Param1					:sSmartGreiferProzessVariablen;
	Param2					:sSmartGreiferProzessVariablen;
	Param3					:sSmartGreiferProzessVariablen;
	Param4					:sSmartGreiferProzessVariablen;
		
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Zustandshandling();
Anlage();
Systemparameter();


Position_1.q1 := -0.3;
Position_1.q2 := 0.5;
Position_1.q3 := 0.42;
Position_1.q4 := 120;
Position_1.q5 := -132;
Position_1.q6 := 0;
Position_1.a := 0.05;
Position_1.v := 0.05;
Position_1.MoveTyp := 3;
Position_1.PosTyp := 0;

Position_2.q1 := 0.4;
Position_2.q2 := 0.52;
Position_2.q3 := 0.42;
Position_2.q4 := 120;
Position_2.q5 := -132;
Position_2.q6 := 0;
Position_2.a := 0.05;
Position_2.v := 0.05;
Position_2.MoveTyp := 3;
Position_2.PosTyp := 0;

Position_3.q1 := 0.05;
Position_3.q2 := 0.68;
Position_3.q3 := 0.42;
Position_3.q4 := 120;
Position_3.q5 := -132;
Position_3.q6 := 0;
Position_3.a := 0.05;
Position_3.v := 0.05;
Position_3.MoveTyp := 3;
Position_3.PosTyp := 0;

GVL.eKraftLimitValue.Fz := -40;

TestAblauf(
	bExecute := Execute,
	iSysCommand := GVL.SystemCommand,
	Position_1 := Position_1,
	Position_2 := Position_2,
	Position_3 := Position_3);
	

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>